workshop03/prepare_for_helm_chart/mydb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydb-svc
spec:
  selector:
    app: mydb
  type: ClusterIP
  ports:
    - name: dbport
      port: 3306
      targetPort: 3306
